Add CSS styling for phone

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
   <link href='https://fonts.googleapis.com/earlyaccess/nanummyeongjo.css' rel='stylesheet' type='text/css'>
   <link href="style.css" type="text/css" rel="stylesheet">
+  <link media="(max-width: 800px)" href="mobileStyle.css" type="text/css" rel="stylesheet">
   <title>Anthony Ng</title>
 </head>
 
