Reword the About

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <div class="right-column">
     <div class="about">
       <a id="about"></a>
-      <p>A former tax accountant, I am now interested in working in web development.
+      <p>I am a junior web developer with a passion for designing and developing
+        web apps that make a tangible difference in people's lives. <br><br>
         I am focused on creating a clean user experience while producing readable
         and elegant code. <br><br>
         I approach code and design similarly. In design, I like to
