--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-
   <link href='https://fonts.googleapis.com/earlyaccess/nanummyeongjo.css' rel='stylesheet' type='text/css'>
   <link href="style.css" type="text/css" rel="stylesheet">
-  <link media="(max-width: 800px)" href="mobileStyle.css" type="text/css" rel="stylesheet">
+  <link media="(max-width: 1032px)" href="mobileStyle.css" type="text/css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <title>Anthony Ng</title>
 </head>
 
@@ -14,20 +14,22 @@
 
     <nav>
       <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact Me</a></li>
+        <li><a id="about-link" href="#about">About</a></li>
+        <li><a id="projects-link" href="#projects">Projects</a></li>
+        <li><a id="contact-link" href="#contact">Contact Me</a></li>
       </ul>
     </nav>
   </div>
 
+  <a id="about"></a>
   <div class="right-column">
     <div class="about">
-      <a id="about"></a>
       <p>I am a junior web developer with a passion for designing and developing
-        web apps that make a tangible difference in people's lives. <br><br>
+        web apps that make a tangible difference in people's lives.
+        <br><br>
         I am focused on creating a clean user experience while producing readable
-        and elegant code. <br><br>
+        and elegant code.
+        <br><br>
         I approach code and design similarly. In design, I like to
         embrace the simple with a hint of sophistication. Code should be the same.
       </p>
@@ -59,11 +61,13 @@
     <div class="contact">
       <a id="contact"></a>
       <ul>
-        <li><a href="mailto:newyork.anthonyng@gmail.com?Subject=Hello">newyork.anthonyng@gmail.com</a></li>
-        <li><a href="https://github.com/newyork-anthonyng">Github</a></li>
-        <li><a href="https://www.linkedin.com/in/anthony-ng-02856056">LinkedIn</a></li>
+        <li><a href="mailto:newyork.anthonyng@gmail.com?Subject=Hello" target="_blank">Email</a></li>
+        <li><a href="https://github.com/newyork-anthonyng" target="_blank">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/anthony-ng-02856056" target="_blank">LinkedIn</a></li>
       </ul>
     </div>
   </div>
+
+  <script src="app.js"></script>
 </body>
 </html>
