--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="./public/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="./public/favicon.ico" rel="icon" type="image/x-icon">
+
   <link href='https://fonts.googleapis.com/earlyaccess/nanummyeongjo.css' rel='stylesheet' type='text/css'>
   <link href="style.css" type="text/css" rel="stylesheet">
   <link media="(max-width: 1032px)" href="mobileStyle.css" type="text/css" rel="stylesheet">
